src/snapshots/gpui_markup__codegen__tests__method_call_no_args.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { div { .flex(), } })"
---
fn __wrapper() {
    {
        fn __assert_parent_element<T: gpui::ParentElement>() {}
        __assert_parent_element::<gpui::Div>();
        div()
    }
        .flex()
}
