src/snapshots/gpui_markup__codegen__tests__method_chain.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { <div> {.flex().flex_col().gap_2()} </div> })"
---
fn __wrapper() {
    {
        fn __assert_parent_element<T: gpui::ParentElement>() {}
        __assert_parent_element::<gpui::Div>();
        {
            #[allow(path_statements)] div;
            div()
        }
    }
        .flex()
        .flex_col()
        .gap_2()
}
