src/snapshots/gpui_markup__codegen__tests__nested_elements.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { div [flex] { div { \"Inner\" }, } })"
---
fn __wrapper() {
    {
        fn __assert_parent_element<T: gpui::ParentElement>() {}
        __assert_parent_element::<gpui::Div>();
        div().flex()
    }
        .child(
            {
                fn __assert_parent_element<T: gpui::ParentElement>() {}
                __assert_parent_element::<gpui::Div>();
                div()
            }
                .child("Inner"),
        )
}
