src/snapshots/gpui_markup__codegen__tests__spread_with_siblings.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { div { \"Header\", ..items, \"Footer\", } })"
---
fn __wrapper() {
    {
        fn __assert_parent_element<T: gpui::ParentElement>() {}
        __assert_parent_element::<gpui::Div>();
        div()
    }
        .child("Header")
        .children(items)
        .child("Footer")
}
