src/snapshots/gpui_markup__codegen__tests__svg.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { <svg path={icon_path} size={px(24.0)}/> })"
---
svg () . path (icon_path) . size (px (24.0))
